<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.android.ratetattoo.Login">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:src="@mipmap/logo"
        android:layout_weight="8"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/EtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomeusuario"
            android:layout_marginBottom="4dp"
            android:singleLine="true"
            android:textColorHint="@color/primary_light"
            android:textSize="16sp"
            android:paddingLeft="10dp"/>

        <EditText
            android:id="@+id/EtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:textColorHint="@color/primary_light"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:textColor="@color/primary_light"
            android:textSize="14sp"
            />

    </LinearLayout>

</LinearLayout>