<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    tools:context="com.example.android.ratetattoo.Description">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"/>





    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_shop"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_shop_1"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardBackgroundColor="@color/colorWhite">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_n_shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/n_shop_1"
                        android:textSize="21sp"
                        android:textColor="@color/colorPrimaryText"
                        android:textStyle="bold"
                        android:paddingBottom="24dp"/>

                    <TextView
                        android:id="@+id/tv_a_shop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/e_shop_1"
                        android:paddingBottom="12dp"
                        android:textColor="@color/colorSecondaryText"/>


                    <TextView
                        android:id="@+id/tv_p_shop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/p_shop_1"
                        android:paddingBottom="20dp"
                        android:textColor="@color/colorSecondaryText"/>

                    <Button
                        android:id="@+id/btn_map"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mapa"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:background="@color/colorAccent"
                        android:textColor="@color/colorWhite"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardBackgroundColor="@color/colorWhite">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <RatingBar
                        android:paddingTop="8dp"
                        android:theme="@style/RatingBar"
                        android:rating="3"
                        android:stepSize="0.5"
                        android:numStars="5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:layout_marginTop="8dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Votar"
                        android:textColor="@color/colorWhite"
                        android:background="@color/colorAccent"/>

                </LinearLayout>


            </android.support.v7.widget.CardView>



        </LinearLayout>

    </ScrollView>

</LinearLayout>